syntax = "proto3";
import "google/protobuf/empty.proto";
import "promotion/promotion-condition.proto";
import "promotion/promotion-effect.proto";
import "promotion/travel-context.proto";
import "travel/travel-solution.proto";
option java_multiple_files = true;
option java_package = "it.trenical.promotion.proto";
package promo;


service PromotionService {
  rpc RegisterPromotion(PromotionMessage) returns (google.protobuf.Empty);
  rpc GetAllPromotions(GetAllPromotionsRequest) returns (stream PromotionMessage);
  rpc UpdatePromotionState(UpdatePromotionRequest) returns (google.protobuf.Empty);
  rpc GetPromotionById(GetPromotionRequest) returns (PromotionMessage);

  rpc ApplyPromotions(ApplyPromotionRequest) returns (ApplyPromotionResponse);

  rpc SubscribeToFidelity(SubscribeToFidelityRequest) returns (google.protobuf.Empty);
  rpc UnsubscribeToFidelity(UnsubscribeToFidelityRequest) returns (google.protobuf.Empty);
}

message GetAllPromotionsRequest {
  bool showDisabled = 1;
}

message GetPromotionRequest {
  string id = 1;
}

message UpdatePromotionRequest {
  string id = 1;
  bool enable = 2;
}

message PromotionMessage {
  string id = 1;
  string name = 2;
  string description = 3;
  repeated promotion.PromotionCondition conditions = 4;
  promotion.PromotionEffect effect = 5;
}

message ApplyPromotionRequest {
  travel.TravelSolution solution = 1;
}

message ApplyPromotionResponse {
  travel.TravelSolution solution = 1;
}

message SubscribeToFidelityRequest {
  string username = 1;
}

message UnsubscribeToFidelityRequest {
  string username = 1;
}